--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,14 @@
 @import url("../vendor/normalize.css");
+@import url("../vendor/box-sizing.css");
 @import url("../fonts/inter.css");
 
 @import url("../blocks/body/body.css");
 
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
+@import url("../blocks/header/__top/header__top.css");
+@import url("../blocks/header/__profile-mobile/header__profile-mobile.css");
+@import url("../blocks/header/__sep/header__sep.css");
 
 @import url("../blocks/partners/partners.css");
 @import url("../blocks/partners/__logo/partners__logo.css");
@@ -15,9 +19,6 @@
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__name/profile__name.css");
 @import url("../blocks/profile/__photo/profile__photo.css");
-@import url("../blocks/profile/__mobile/profile__mobile.css");
-
-@import url('../blocks/line/line.css');
 
 @import url("../blocks/search-box/search-box.css");
 @import url("../blocks/search-box/__search-btn/search-box__search-btn.css");
