--- a/blocks/partners/__logo/__photo/partners__logo__photo.css
+++ b/blocks/partners/__logo/__photo/partners__logo__photo.css
@@ -1,19 +1,3 @@
 .partners__logo__photo {
-  height: 120px;
-  width: 287px;
-  object-fit: cover;
-  vertical-align: bottom;
-  border-radius: 1vmin;
-  background: #FFFFFF;
-  border: 1px solid #EBEBF1;
-  border-radius: 5px;
-}
-
-@media (max-width: 375px) {
-  .partners__logo__photo {
-
-    width: 100%;
-    max-height: 75vh;
-    min-width: 0;
-  }
+    max-width: 100%;
 }
