--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,15 @@
 .profile {
-    display: flex;
+    display: none;
+
     justify-content: center;
     align-items: center;
     column-gap: 10px;
+    order: 4;
+}
+
+@media screen and (min-width:768px) {
+    .profile {
+        display: flex;
+
+    }
 }
